# IndieStudio

./: .epitechcli.json  .gitignore  CMakeLists.txt  Gameplay.md  Jenkinsfile  Makefile  debug.txt  todo
api/indiestudio/: IGame.hpp
api/indiestudio/common/: ByteBuffer.hpp  Error.hpp  IFontManager.hpp  ILogger.hpp  IMeshManager.hpp  ISerializable.hpp  ISoundManager.hpp  ITextureManager.hpp
api/indiestudio/ecs/: Events.hpp
api/indiestudio/mod/: AMod.hpp
api/indiestudio/player/: IControlProvider.hpp  IControlProviderManager.hpp
api/indiestudio/statistic/: IAchievementManager.hpp  IStatisticManager.hpp
api/indiestudio/utils/: ByteBufferUtils.hpp
api/indiestudio/world/: IWorld.hpp  IWorldGenerator.hpp  IWorldManager.hpp  MapPattern.hpp  WorldSettings.hpp
bonus/: wiimote_config
include/ecs/: UUID.hpp
include/indiestudio/: Bootstraper.hpp  Constants.hpp  Game.hpp  SceneManager.hpp  Singleton.hpp
include/indiestudio/common/: ByteBuffer.hpp  Configuration.hpp  Error.hpp  FontManager.hpp  ISerializable.hpp  Logger.hpp  MeshManager.hpp  Registry.hpp  Scheduler.hpp  SoundManager.hpp  TextureManager.hpp
include/indiestudio/ecs/: BaseSystem.hpp  Components.hpp  ECSManager.hpp  Entity.hpp  Events.hpp  Initializer.hpp  Septieme_cercle_des_enfers_ne_pas_toucher.hpp  Signature.hpp  Systems.hpp  TypeList.hpp  UUID.hpp
include/indiestudio/ecs/systems/: ApplyExplosionSystem.hpp  DeathSystem.hpp  DrawEntitiesSystem.hpp  EventSystem.hpp  ExplosionDurationSystem.hpp  IASystem.hpp  MovePlayerSystem.hpp  PickUpPowerUp.hpp  PickUpPowerUpSystem.hpp  SetupExplosionSystem.hpp  SolidBombSystem.hpp  WinLooseSystem.hpp
include/indiestudio/gameplay/: BombFactory.hpp
include/indiestudio/mod/: IMod.hpp  LibraryWrapper.hpp  ModManager.hpp
include/indiestudio/player/: AIControlProvider.hpp  ControlProviderManager.hpp  KeyboardControlProvider.hpp
include/indiestudio/scene/: MainMenuScene.hpp  NewGameScene.hpp  PlayScene.hpp  SceneManager.hpp
include/indiestudio/statistic/: AchievementManager.hpp  StatisticManager.hpp
include/indiestudio/utils/: ByteBufferUtils.hpp  CRCUtils.hpp  Packed.hpp  UniqueIrrPtr.hpp
include/indiestudio/world/: BasicWorldGenerator.hpp  EmptyWorldGenerator.hpp  IWorld.hpp  VerticalWorldGenerator.hpp  World.hpp  WorldManager.hpp  WorldSettings.hpp
mods/: CMakeLists.txt
mods/DebugOverlay/: CMakeLists.txt
mods/DebugOverlay/include/: DebugOverlay.hpp
mods/DebugOverlay/include/indiestudio/debugoverlay/: DebugOverlay.hpp
mods/DebugOverlay/src/: DebugOverlay.cpp
mods/MazeWorldGenerator/: CMakeLists.txt
mods/MazeWorldGenerator/include/indiestudio/mazeworldgenerator/: MazeWorldGenerator.hpp
mods/MazeWorldGenerator/src/: MazeWorldGenerator.cpp
mods/WiimoteController/: CMakeLists.txt
mods/WiimoteController/include/indiestudio/wiimotecontroller/: WiimoteControlProvider.hpp  WiimoteController.hpp
mods/WiimoteController/src/: WiimoteControlProvider.cpp  WiimoteController.cpp
src/: Base.cpp  Bootstraper.cpp  Constants.cpp  DEPRECATED_Base.cpp  Game.cpp  Insomnie.cpp  Main.cpp  SceneManager.cpp
src/common/: Configuration.cpp  FontManager.cpp  Logger.cpp  MeshManager.cpp  Registry.cpp  Scheduler.cpp  SoundManager.cpp  TextureManager.cpp
src/ecs/: BaseSystem.hpp  Components.hpp  Ecs.hpp  Entity.hpp  Events.hpp  Septieme_cercle_des_enfers_ne_pas_toucher.hpp  Signature.cpp  Systems.hpp  TypeList.hpp  UUID.cpp  createNodeSystem.cpp
src/ecs/Systems/: EventSystem.hpp  Systems.hpp  applyExplosionSystem.hpp  createNodeSystem.hpp  drawEntitiesSystem.hpp  explosionDurationSystem.hpp  movePlayer.hpp  movePlayerSystem.hpp  setupExplosionSystem.hpp
src/ecs/systems/: ApplyExplosionSystem.cpp  DeathSystem.cpp  EventSystem.cpp  ExplosionDurationSystem.cpp  MovePlayerSystem.cpp  PickUpPowerUp.cpp  PickUpPowerUpSystem.cpp  SetupExplosionSystem.cpp  SolidBombSystem.cpp  WinLooseSystem.cpp
src/mod/: LibraryWrapper.cpp  ModManager.cpp
src/player/: AIControlProvider.cpp  ControlProviderManager.cpp  KeyboardControlProvider.cpp
src/scene/: MainMenuScene.cpp  NewGameScene.cpp  PlayScene.cpp  SceneManager.cpp
src/statistic/: AchievementManager.cpp  StatisticManager.cpp
src/utils/: ByteBufferUtils.cpp  CRCUtils.cpp
src/world/: BasicWorldGenerator.cpp  EmptyWorldGenerator.cpp  MapPattern.cpp  VerticalWorldGenerator.cpp  World.cpp  WorldManager.cpp  WorldSettings.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/ecs/: Signature.cpp
